Add display age method

--- a/app/views/users/_profile_window.html.erb
+++ b/app/views/users/_profile_window.html.erb
@@ -5,5 +5,5 @@
   <p><% user.categories.each do |c| %></p>
   <p><%= c.name %></p>
   <p><% end %></p>
-  <%= link_to "Want to hang out?", user_path(user) %>
+  <%= link_to "See profile", user_path(user) %>
 </div>
