--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -7,16 +7,16 @@
 // General style
 $font-family-sans-serif: $body-font;
 $headings-font-family:   $headers-font;
-$body-bg:                $light-gray;
+$body-bg:                $navy;
 $font-size-base:         1rem;
 
 // Colors
-$body-color: $gray;
-$primary:    $blue;
+$body-color:           black;
+$primary:    $peach;
 $success:    $green;
 $info:       $yellow;
-$danger:     $red;
-$warning:    $orange;
+$danger:     white;
+$warning:    black;
 
 // Buttons & inputs' radius
 $border-radius:    2px;
