--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
-<div id="message-<%= message.id %>">
+<div id="message-<%= message.id %>" class="<%= current_user == message.user ? "text-left" : "text-right" %>">
   <small>
     <strong><%= message.user.email %></strong>
     <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
