--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -3,7 +3,7 @@
   data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>"
 >
   <h1>#<%= @chatroom.name %></h1>
-  <div class="messages" data-chatroom-subscription-target="messages">
+  <div class="messages" style="height: 1200px" data-chatroom-subscription-target="messages">
     <% @chatroom.messages.each do |message| %>
       <%= render "messages/message", message: message %>
     <% end %>
@@ -12,12 +12,18 @@
   <h1>Chat</h1>
   <%= simple_form_for [@chatroom, @message],
   html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f| %>
+
   <%= f.input :content,
     label: false,
     placeholder: "Message here...",
-    wrapper_html: {class: "flex-grow-1"}
+    wrapper_html: {class: "flex-grow-1"},
+    input_html: {style: "background-color: white;"}
   %>
+
   <%= f.submit "Send", class: "btn btn-primary mb-3" %>
+  </div>
+
 <% end %>
+
 
 </div>
