--- a/app/views/users/_profile_window.html.erb
+++ b/app/views/users/_profile_window.html.erb
@@ -1,9 +1,6 @@
-<div class="window">
-  <h2><%= user.first_name %></h2>
-  <p><%= user.dob %></p>
-  <p>My interest : </p>
-  <p><% user.categories.each do |c| %></p>
-  <p><%= c.name %></p>
-  <p><% end %></p>
-  <%= link_to "See profile", user_path(user) %>
-</div>
+<h2><%= user.first_name%>, <%= user.age %></h2>
+<p>My interests : </p>
+<p><% user.categories.each do |c| %></p>
+<p><%= c.name %></p>
+<p><% end %></p>
+<%= link_to "Message", user_path(user), class: "window-btn" %>
