--- a/app/views/users/search_map.html.erb
+++ b/app/views/users/search_map.html.erb
@@ -1,16 +1,22 @@
-<div class="search-form text-white">
-  <%= form_with url: user_filter_users_map_path, method: :post do |f| %>
-    <%= f.label :categories, "Interests: " %>
-    <%= f.select :categories, ['Fitness & Sports', 'Entertainment', 'Art & Culture', 'Food & Drink', 'Community & Envoirnment', 'Hobbies & Passions', 'Travel & Adventure' ] %>
-    <%= f.label :gender, "Gender: " %>
-    <%= f.select :gender, ['Male', 'Female'] %>
-    <%= f.label :address, "Meet up location: " %>
-    <%= f.text_field :address %>
-    <%= f.submit "Search" %>
-  <% end %>
+<div class="form-container">
+  <ul class="search-form">
+    <%= form_with url: user_filter_users_map_path, method: :post do |f| %>
+      <li><%= f.label :categories, "What to do: " %></li>
+      <li><%= f.select :categories, ['Art & Culture', 'Community & Envoirnment', 'Entertainment','Fitness & Sports', 'Food & Drink',  'Hobbies & Passions', 'Travel & Adventure' ], prompt: "Interests" %></li>
+      <li><%= f.label :gender, "Looking for: " %></li>
+      <li><%= f.select :gender, ['Female', 'Male'], prompt: "Gender" %></li>
+      <li><%= f.label :address, "Meetup Location: " %></li>
+      <li><%= f.text_field :address, placeholder: "District e.g. Hackney"  %></li>
+      <%# <li><%= f.label :age, "Age:" %>
+      <%# <li><%= f.select :age, ['Above 40', '35-39', '30-34', '25-29', '20-24'] %>
+      <div class="search-form-btn">
+        <li><%= f.submit "Search", class: "search-form-btn btn btn-primary" %></li>
+      </div>
+    <% end %>
+  </ul>
 </div>
 
-<div style="width: 100%; height: 600px;"
+<div style="width: 100%; height: 400px;"
   data-controller="filter-users-map"
   data-filter-users-map-markers-value="<%= @markers.to_json %>"
   data-filter-users-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
