--- a/app/views/users/the_results.html.erb
+++ b/app/views/users/the_results.html.erb
@@ -2,3 +2,6 @@
   data-controller="filter-users-map"
   data-filter-users-map-markers-value="<%= params[:markers].to_json %>"
   data-filter-users-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+
+
+<%= link_to "New search",  user_search_map_path(:user_id), class: 'btn btn-primary mt-3 mx-3' %>
