--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -2,6 +2,10 @@
   max-width: 300px;
 }
 
+.mapboxgl-popup-content div {
+  padding: 10px;
+}
+
 .mapboxgl-popup-close-button {
   display: none;
 }
@@ -11,13 +15,13 @@
   font-family: "Tenor Sans", sans-serif;
   background: #fff;
   border-radius: 3px;
-  padding: 15px 25px;
+  padding: 18px;
 }
 
 .mapboxgl-popup-content h2 {
   font-size: 24px;
   font-weight: 700;
-  margin-bottom: 0;
+  margin-bottom: 3px;
 }
 
 .mapboxgl-popup-content p {
