--- a/app/views/users/_profile_window.html.erb
+++ b/app/views/users/_profile_window.html.erb
@@ -3,4 +3,4 @@
 <p><% user.categories.each do |c| %></p>
 <p><%= c.name %></p>
 <p><% end %></p>
-<%= link_to "Message", user_path(user), class: "window-btn" %>
+<%= link_to "Message", user_path(user), class: "btn btn-primary mb-3" %>
