--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,6 +3,6 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
-@import "map";
+@import "map_popup";
 @import "chatroom";
 @import "search_form";
