--- a/app/views/users/_profile_window.html.erb
+++ b/app/views/users/_profile_window.html.erb
@@ -1,6 +1,12 @@
-<h2><%= user.first_name%>, <%= user.age %></h2>
-<p>My interests : </p>
-<p><% user.categories.each do |c| %></p>
-<p><%= c.name %></p>
-<p><% end %></p>
+<div class="avatar-box">
+  <%= image_tag("https://res.cloudinary.com/duufhyqzx/image/upload/w_1000,c_fill,ar_1:1,g_auto,r_max,b_rgb:262c35/v1678047757/Capybara%20profile%20picture/stephanie-liverani-Zz5LQe-VSMY-unsplash_vttxk0.jpg", class: "map-avatar") %>
+</div>
+
+<div class="user-info-box">
+  <h2><%= user.first_name%>, <%= user.age %></h2>
+  <p>My interests : </p>
+  <p><% user.categories.each do |c| %></p>
+  <p><%= c.name %></p>
+  <p><% end %></p>
+</div>
 <%= link_to "Message", user_path(user), class: "btn btn-primary mb-3" %>
