--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,30 +16,30 @@
 	</div>
 </form> %>
 
-//Connect the select input with the tom_select Stimulus controller:
-<%= f.input :states, collection: ["Alabama", ..., "Florida"], input_html: {data: {controller: "tom_select"}} %>
+<%# //Connect the select input with the tom_select Stimulus controller: %>
+<%# <%= f.input :states, collection: ["Alabama", ..., "Florida"], input_html: {data: {controller: "tom_select"}} %>
 
-//This will activate the multiple selection of choices in your input.
-<%= f.input :states, collection: ["Alabama", ..., "Florida"], input_html: {multiple: true, data: {controller: "tom-select", tom_select_options_value: {tags: true}}} %>
+<%# //This will activate the multiple selection of choices in your input. %>
+<%# <%= f.input :states, collection: ["Alabama", ..., "Florida"], input_html: {multiple: true, data: {controller: "tom-select", tom_select_options_value: {tags: true}}} %>
 
-<select id="select-state" name="state[]" multiple placeholder="Select a state..." autocomplete="off">
+<%# <select id="select-state" name="state[]" multiple placeholder="Select a state..." autocomplete="off">
 			<option value="">Select a state...</option>
-			<option value="AL">Alabama</option>
-			<option value="AK">Alaska</option>
+			<%# <option value="AL">Alabama</option> %>
+			<%# <option value="AK">Alaska</option>
 			<option value="AZ">Arizona</option>
 			<option value="AR">Arkansas</option>
 			<option value="CA" selected>California</option>
 			<option value="CO">Colorado</option>
 			<option value="CT">Connecticut</option>
 			<option value="DE">Delaware</option>
-			<option value="DC">District of Columbia</option>
-			<option value="FL">Florida</option>
-			<option value="GA">Georgia</option>
-			<option value="HI">Hawaii</option>
+			<option value="DC">District of Columbia</option> %>
+			<%# <option value="FL">Florida</option>
+			<option value="GA">Georgia</option> %>
+			<%# <option value="HI">Hawaii</option>
 			<option value="ID">Idaho</option>
 			<option value="IL">Illinois</option>
-			<option value="IN">Indiana</option>
-			<option value="IA">Iowa</option>
+			<option value="IN">Indiana</option> %>
+			<%# <option value="IA">Iowa</option>
 			<option value="KS">Kansas</option>
 			<option value="KY">Kentucky</option>
 			<option value="LA">Louisiana</option>
@@ -48,8 +48,8 @@
 			<option value="MA">Massachusetts</option>
 			<option value="MI">Michigan</option>
 			<option value="MN">Minnesota</option>
-			<option value="MS">Mississippi</option>
-			<option value="MO">Missouri</option>
+			<option value="MS">Mississippi</option> %>
+			<%# <option value="MO">Missouri</option>
 			<option value="MT">Montana</option>
 			<option value="NE">Nebraska</option>
 			<option value="NV">Nevada</option>
@@ -61,8 +61,8 @@
 			<option value="ND">North Dakota</option>
 			<option value="OH">Ohio</option>
 			<option value="OK">Oklahoma</option>
-			<option value="OR">Oregon</option>
-			<option value="PA">Pennsylvania</option>
+			<option value="OR">Oregon</option> %>
+			<%# <option value="PA">Pennsylvania</option>
 			<option value="RI">Rhode Island</option>
 			<option value="SC">South Carolina</option>
 			<option value="SD">South Dakota</option>
@@ -70,9 +70,9 @@
 			<option value="TX">Texas</option>
 			<option value="UT">Utah</option>
 			<option value="VT">Vermont</option>
-			<option value="VA">Virginia</option>
-			<option value="WA">Washington</option>
+			<option value="VA">Virginia</option> %>
+			<%# <option value="WA">Washington</option>
 			<option value="WV">West Virginia</option>
 			<option value="WI">Wisconsin</option>
-			<option value="WY" selected>Wyoming</option>
-		</select>
+			<%# <option value="WY" selected>Wyoming</option> %>
+		<%# </select> %>
