--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,1 +1,49 @@
 <h1>Edit profile</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="profile-image">
+        <%= image_tag @user.avatar_url %>
+      </div>
+    </div>
+    <div class="col-md-8">
+      <div class="profile-header">
+        <h1>Edit Profile</h1>
+      </div>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
+        <%= devise_error_messages! %>
+        <div class="form-group">
+          <%= f.label :name %>
+          <%= f.text_field :name, class: 'form-control', placeholder: 'Enter name', autofocus: true %>
+        </div>
+        <div class="form-group">
+          <%= f.label :email %>
+          <%= f.email_field :email, class: 'form-control', placeholder: 'Enter email' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :bio %>
+          <%= f.text_area :bio, class: 'form-control', placeholder: 'Enter bio' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :avatar %>
+          <%= f.file_field :avatar, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :current_password %>
+          <%= f.password_field :current_password, class: 'form-control', autocomplete: 'off' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password %>
+          <%= f.password_field :password, class: 'form-control', autocomplete: 'off' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, class: 'form-control', autocomplete: 'off' %>
+        </div>
+        <div class="form-group">
+          <%= f.submit 'Update Profile', class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
