--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
       <br>
       <%= @user.gender %>
       <br>
-      <%= @user.dob %>
+      <%= @user.age %>
   </div>
 <a href="#" class="button">Send Message</a>
   </div>
