add links to profile

--- a/app/views/users/_profile_window.html.erb
+++ b/app/views/users/_profile_window.html.erb
@@ -9,4 +9,4 @@
   <p><%= c.name %></p>
   <p><% end %></p>
 </div>
-<%= link_to "Message", user_path(user), class: "btn btn-primary mb-3" %>
+<%= link_to "See Profile", user_path(user), class: "btn btn-primary mb-3" %>
