--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,23 +13,7 @@
       <%= @user.gender %>
       <br>
       <%= @user.age %>
-  </div>
-<a href="#" class="button">Send Message</a>
+    </div>
+   <%= link_to "Send Message", chatroom_path %>
   </div>
 </div>
-<style>
-.button {
-  background-color: orange;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-}
-.rounded_circle {
-  border-radius: 50%;
-  padding: 30px;
-}
-</style>
