--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-4">
       <div class="profile-image">
-        <%= image_tag @user.avatar_url %>
+        <%= image_tag %>
       </div>
     </div>
     <div class="col-md-8">
