--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,26 +1,24 @@
 <div class="container p-5 my-5 bg-light">
-  <h1 class="card-title"><strong>Helen C, 29</strong></h1>
+  <h1 class="card-title"><strong><%= @user.first_name %> <%= @user.last_name %>, <%= @user.age %></strong></h1>
   <div class="card" style="width:300px">
     <img class="rounded-circle" class="img-responsive" src="https://www.allthingswild.co.uk/wp-content/uploads/2019/11/capy.jpg" alt="profile photo" style="width:100%">
     <div class="card-body">
-      <strong><%= @user.first_name %>
-      <%= @user.last_name %></strong>
-      <br>
       <%= @user.address %>
       <br>
       <%= @user.bio %>
       <br>
       <%= @user.gender %>
-      <br>
-      <%= @user.age %>
     </div>
-   <%= link_to "Send Message", chatroom_path %>
+    <%= link_to "Send Message", chatroom_path %>
   </div>
 </div>
-<div class="show-profile">
-  <h1><%= @user.first_name %></h1>
+<div data-toggle-favorite-like-icon-class="like-icon mx-2" data-controller="toggle-favorite" data-toggle-favorite-liked-user-id-value="<%= @user.id %>">
+  <i class="fa fa-heart"
+     data-toggle-favorite-target="icon"
+     data-action="click->toggle-favorite#toggleLikeButton"></i>
+  <%= link_to "Like this profile", toggle_favorite_user_path(@user), remote: true, method: :post %>
 </div>
-<div class="like-icon mx-2" data-controller="toggle-favorite" data-action="click->toggle-favorite#toggle" >
-  <i class="fas fa-heart" data-like-button-target="icon"></i>
-  <%= link_to "like profile", user_path(@user), remote: true, method: :post %>
-</div>
+
+
+<%# <div class="like-icon mx-2 <%= 'red' if current_user.favorited?(cocktail)" data-id="<%= cocktail.id">  %>
+<%# add red class to like icon if current user has favorite this user, data id is the favorited user id %>
