--- a/app/views/users/_search_form.html.erb
+++ b/app/views/users/_search_form.html.erb
@@ -1,12 +1,12 @@
 <div class="form-container">
   <ul class="search-form">
     <%= form_with url: user_filter_users_map_path, method: :post do |f| %>
-      <li><%= f.label :categories, "What to do: " %></li>
-      <li><%= f.select :categories, ['Art & Culture', 'Community & Envoirnment', 'Entertainment','Fitness & Sports', 'Food & Drink',  'Hobbies & Passions', 'Travel & Adventure' ], prompt: "Interests" %></li>
-      <li><%= f.label :gender, "Looking for: " %></li>
-      <li><%= f.select :gender, ['Female', 'Male'], prompt: "Gender" %></li>
-      <li><%= f.label :address, "Meetup Location: " %></li>
-      <li><%= f.text_field :address, placeholder: "District e.g. Hackney"  %></li>
+      <li class="form-label"><%= f.label :categories, "What to do " %></li>
+      <li class="select"><%= f.select :categories, ['Art & Culture', 'Community & Envoirnment', 'Entertainment','Fitness & Sports', 'Food & Drink',  'Hobbies & Passions', 'Travel & Adventure' ], prompt: "Interests" %></li>
+      <li class="form-label"><%= f.label :gender, "Looking for " %></li>
+      <li class="select"><%= f.select :gender, ['Female', 'Male'], prompt: "Gender" %></li>
+      <li class="form-label"><%= f.label :address, "Meetup Location " %></li>
+      <li class="form-input"><%= f.text_field :address, placeholder: "District e.g. Hackney"  %></li>
       <%# <li><%= f.label :age, "Age:" %>
       <%# <li><%= f.select :age, ['Over 40', '35-39', '30-34', '25-29', 'Below 25'] %>
       <div class="search-form-btn">
