install cloudinary gem

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-4">
       <div class="profile-image">
-        <%= image_tag %>
+        <%= cl_image_tag ("https://res.cloudinary.com/dinvv7foh/image/upload/w_1000,c_fill,ar_1:1,g_auto,r_max,bo_5px_solid_red,b_rgb:262c35/v1678352850/female-avatar-profile-icon-round-african-american-vector-18307259_ilwk4o.jpg") %>
       </div>
     </div>
     <div class="col-md-8">
