--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,14 +3,21 @@
   <div class="row">
     <div class="col-md-4">
       <div class="profile-image">
-        <%= cl_image_tag ("https://res.cloudinary.com/dinvv7foh/image/upload/w_1000,c_fill,ar_1:1,g_auto,r_max,bo_5px_solid_red,b_rgb:262c35/v1678352850/female-avatar-profile-icon-round-african-american-vector-18307259_ilwk4o.jpg") %>
+        <%= cl_image_tag("https://res.cloudinary.com/dinvv7foh/image/upload/w_1000,c_fill,ar_1:1,g_auto,r_max,bo_5px_solid_red,b_rgb:262c35/v1678352850/female-avatar-profile-icon-round-african-american-vector-18307259_ilwk4o.jpg",
+          crop: "thumb",
+          gravity: "face",
+          width: 100,
+          height: 100,
+          radius: "max",
+          class: "rounded-circle profile-image") %>
       </div>
     </div>
     <div class="col-md-8">
       <div class="profile-header">
         <h1>Edit Profile</h1>
       </div>
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
+        <%= form_for(current_user, as: :user, url: registration_path(:user), html: { method: :put, multipart: true }) do |f| %>
+        <% return "" if current_user.errors.empty? %>
         <%= devise_error_messages! %>
         <div class="form-group">
           <%= f.label :name %>
