--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,20 +1,20 @@
 .avatar {
   width: 40px;
-  border-radius: 50%;
+  border-radius: 20px;
 }
 .avatar-large {
   width: 56px;
-  border-radius: 50%;
+  border-radius: 20px;
 }
-.avatar-bordered {
-  width: 40px;
-  border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
-}
+
 .avatar-square {
   width: 40px;
-  border-radius: 0px;
+  border-radius: 20px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
+}
+
+.d-flex {
+  display: flex;
+  align-items: center;
 }
