add coloumns to user table

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,9 @@
       <br>
       <%= @user.gender %>
       <br>
+      <%= @user.profession %>
+      <br>
+      <%= @user.horoscope %>
     </div>
    <%= link_to "Send Message", chatroom_path %>
   </div>
