--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,6 +1,6 @@
 <div id="message-<%= message.id %>" class="<%= current_user == message.user ? "text-left" : "text-right" %>">
   <small>
-    <strong><%= message.user.email %></strong>
+    <strong><%= message.user.first_name %></strong>
     <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
   </small>
   <p><%= message.content %></p>
