--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,10 @@
 // Specific CSS for your home-page
+// body {background-color: coral;}
+// h1 {
+//   text-align: center;
+//   color: navy
+// }
+// p {
+//   text-align: center;
+
+// }
