--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,39 @@
+
 <div class="container p-5 my-5 bg-light">
-  <h1 class="card-title"><strong>Helen C, 29</strong></h1>
   <div class="card" style="width:300px">
-    <img class="rounded-circle" class="img-responsive" src="https://www.allthingswild.co.uk/wp-content/uploads/2019/11/capy.jpg" alt="profile photo" style="width:100%">
+
+  <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+  <!-- Indicators/dots -->
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+  </div>
+
+  <!-- The slideshow/carousel -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://drifttravel.com/wp-content/uploads/2017/08/Royal_Caribbean_Shay_Mitchell-300x350.jpg" alt="Me" class="d-block" style="width:100%">
+    </div>
+    <div class="carousel-item">
+      <img src="https://media1.popsugar-assets.com/files/thumbor/AhUt8IsCjZ43umtO-REp43X_vDs/fit-in/1024x1024/filters:format_auto-!!-:strip_icc-!!-/2015/07/29/037/n/1922398/4414db452e661b0b_10890676_1526701110935671_1799160418_n/i/When-She-Traveled-Dubai.jpg" alt="Me" class="d-block" style="width:100%">
+    </div>
+    <div class="carousel-item">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTueYEu65ZG54G7mzdVrC8wAaQ_eLlDGZfIxg&usqp=CAU" alt="Me" class="d-block" style="width:100%">
+    </div>
+  </div>
+
+  <!-- Left and right controls/icons -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
+
+
     <div class="card-body">
       <strong><%= @user.first_name %>
       <%= @user.last_name %></strong>
@@ -12,24 +44,88 @@
       <br>
       <%= @user.gender %>
       <br>
-      <%= @user.age %>
-  </div>
-<a href="#" class="button">Send Message</a>
+      <%= @user.dob %>
   </div>
 </div>
+
+
 <style>
-.button {
-  background-color: orange;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
+body {margin:0;}
+
+.icon-bar {
+  width: 100%;
+  background-color: grey;
+  overflow: auto;
 }
-.rounded_circle {
-  border-radius: 50%;
-  padding: 30px;
+
+.icon-bar a {
+  float: left;
+  width: 20%;
+  text-align: center;
+  padding: 12px 0;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 36px;
+}
+
+.icon-bar a:hover {
+  background-color: #000;
+}
+
+.active {
+  background-color: #04AA6D;
 }
 </style>
+<body>
+
+<div class="icon-bar">
+  <a class="active" href="#"><i class="fa-solid fa-user"></i></a>
+  <a href="#"><i class=""></i></a>
+  <a href="#"><i class="fa fa-chat"></i></a>
+</div>
+
+<%# <!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+<body>
+
+<!-- Carousel -->
+<div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+  <!-- Indicators/dots -->
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+  </div>
+
+  <!-- The slideshow/carousel -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://drifttravel.com/wp-content/uploads/2017/08/Royal_Caribbean_Shay_Mitchell-300x350.jpg" alt="Los Angeles" class="d-block" style="width:100%">
+    </div>
+    <div class="carousel-item">
+      <img src="https://media1.popsugar-assets.com/files/thumbor/AhUt8IsCjZ43umtO-REp43X_vDs/fit-in/1024x1024/filters:format_auto-!!-:strip_icc-!!-/2015/07/29/037/n/1922398/4414db452e661b0b_10890676_1526701110935671_1799160418_n/i/When-She-Traveled-Dubai.jpg" alt="Chicago" class="d-block" style="width:100%">
+    </div>
+    <div class="carousel-item">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTueYEu65ZG54G7mzdVrC8wAaQ_eLlDGZfIxg&usqp=CAU" alt="New York" class="d-block" style="width:100%">
+    </div>
+  </div>
+
+  <!-- Left and right controls/icons -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
+
+</body>
+</html> %>
