--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -16,7 +16,7 @@ $primary:    $peach;
 $success:    $green;
 $info:       $yellow;
 $danger:     white;
-$warning:    black;
+$warning:    $purple;
 
 // Buttons & inputs' radius
 $border-radius:    2px;
