--- a/app/assets/stylesheets/components/_map_popup.scss
+++ b/app/assets/stylesheets/components/_map_popup.scss
@@ -45,6 +45,7 @@
 
 .mapboxgl-popup-content .map-avatar {
   width: 40px;
+  height: 40px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
