--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,59 @@
 <h1>My Profile</h1>
-<div class="p-2 bd-highlight" style="border: 1px;">
 
-  <div class="profile-image" class="pb">
+  <%# <div class="profile-image" class="pb">
     <%= cl_image_tag("danielle_johnsonselfiemuseum_09102021_ncejxd.jpg", :radius=>30, :effect=>"auto_brightness", :height=>250, :quality=>"auto:best", :width=>"372px")%>
-  </div>
+  <%# </div> %>
 
-  <div class="card" style="margin-top: 8rem; border-radius: 20px; padding: 8px 8px 8px 8px;">
+    <div id="demo" class="carousel slide" data-bs-ride="carousel">
+      <!-- Indicators/dots -->
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+      </div>
+
+      <!-- The slideshow/carousel -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+          <img src="https://drifttravel.com/wp-content/uploads/2017/08/Royal_Caribbean_Shay_Mitchell-300x350.jpg" alt="Me" class=“d-block” style="height:50%">
+
+        <div class="carousel-item">
+          <img src="https://www2.pictures.zimbio.com/mp/JXO62_M_sx-x.jpg" alt="Me" class=“d-block” style="height:50%">
+        </div>
+
+        <div class="carousel-item">
+          <img src="https://res.cloudinary.com/dw7zhlxu0/image/upload/v1678551294/KCfVP8We6i4l_plvinm.jpg" alt="Me" class=“d-block” style="height:50%">
+        </div>
+        </div>
+      </div>
+
+      <!-- Left and right controls/icons -->
+      <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </div>
+  </div>
+</div>
+
+
+  <div class="p-2 bd-highlight" style="border: 1px;">
+  <div class="card" style="border-radius: 20px; padding: 4px 4px 4px 4px; background-color: #fee6ad; border-color: #fee6ad;">
     <div class="col-sm-8">
       <div class="profile-header">
         <h1><%= @user.first_name %> <%= @user.last_name %></h1>
-        <p>Hi, I’m Helen!
+          <p>Hi, I’m Helen!
           Food, dog and beach lover.</p>
-          <p>1/2 hungry, 1/2 sleepy</p>
+          <p>1/2 hungry, 1/2 sleepy!</p>
           <p>📍 Shoreditch</p>
-          <p>Favorite things to do: Yoga 🧘🏽‍♀️, Cycling 🚴🏽‍♀️ & Painting 🎨 </p>
+          <p>Favorite things to do:</p>
+          <p>
+            <span style="border: 2px solid #FF8C00; background-color: #f4ac54; padding: 5px;">Yoga 🧘🏽‍♀️,</span>
+            <span style="border: 2px solid #FF8C00; background-color: #f4ac54; padding: 5px;">Cycling 🚴🏽‍♀️</span>
+            <span style="border: 2px solid #FF8C00; background-color: #f4ac54; padding: 5px;">&amp; Painting 🎨</span>
+          </p> %>
       </div>
     </div>
 
@@ -21,10 +61,10 @@
       <div class="row">
           <p>Connect with me!</p>
       </div>
-    </div>
+    </div> %>
 
-    <div class="profile-actions" style="margin-left: 70%">
-      <%= link_to 'Connect', edit_user_path(@user), class:"btn btn-outline", style:"background-color: #b64bd4b7;"  %>
+    <div class="profile-actions" style="margin-left: 80%" >
+     <%= link_to '<i class="fas fa-comments fa-2x"></i>'.html_safe, edit_user_path(@user) %>
     </div>
 
   </div>
