--- a/app/assets/stylesheets/components/_map_popup.scss
+++ b/app/assets/stylesheets/components/_map_popup.scss
@@ -1,43 +1,60 @@
 .mapboxgl-popup div {
   max-width: 400px;
+  border-radius: 8px;
 }
 
 .mapboxgl-popup div .container {
   display: flex;
+  padding-bottom: 0px;
 }
 
 .mapboxgl-popup-content div {
-  padding: 10px;
+  padding: 8px;
+  padding-bottom: 0;
 }
 
 .mapboxgl-popup-close-button {
 }
 
 .mapboxgl-popup-content {
-  font-family: "Tenor Sans", sans-serif;
+  font-family: $body-font;
   background: #fff;
   border-radius: 3px;
   padding: 18px;
+  color: #0c2e41;
 }
 
 .mapboxgl-popup-content h2 {
   font-size: 24px;
   font-weight: 700;
-  margin-bottom: 3px;
+  margin-bottom: 12px;
 }
 
-.mapboxgl-popup-content p {
-  font-size: 12px;
+.mapboxgl-popup-content #interest {
+  font-size: 14px;
   font-weight: 200;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.75em;
+  line-height: normal;
+  border-radius: 1.25em;
+  background-color: #F8F8F8;
+  padding: 5px 10px;
+  width: auto;
+  height: auto;
+}
+
+.mapboxgl-popup-content .user-info-box {
+  margin-left: 12px;
+}
+
+.mapboxgl-popup-content .favorites {
+  font-size: 14px;
+  margin-left: 8px;
 }
 
 .mapboxgl-popup-content a {
   background: $peach;
-  color: black;
-  margin: 18px;
+  color: #0c2e41;
   border-radius: 3px;
-  padding: 4px 12px;
   border-style: none;
   text-decoration: none;
   align-items: center;
@@ -47,10 +64,16 @@
 .mapboxgl-popup-content a:hover { text-decoration: none; }
 .mapboxgl-popup-content a:active { text-decoration: none; }
 
-.mapboxgl-popup-content .map-avatar {
-  width: 40px;
-  height: 40px;
+.mapboxgl-popup-content .avatar {
+  margin-top: 12px;
+  width: 48px;
+  height: 48px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+}
+
+.mapboxgl-popup .btn {
+  background-color: $peach;
+  border-color: $peach;
+  color: black;
 }
