add tom select to search form

--- a/app/assets/stylesheets/components/_search_form.scss
+++ b/app/assets/stylesheets/components/_search_form.scss
@@ -12,3 +12,12 @@
   margin-top: 12px;
   text-align: center;
 }
+
+.form-select {
+  padding: 0;
+  background-color: white;
+}
+
+.form-control {
+  color: white;
+}
