styling for the homepage

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,15 +3,15 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: #f2964a;
+  background-color: red;
   background-size: cover;
   h1 {
-    color: #051367;
+    color: red;
     font-weight: bold;
     font-size: 85px;
   }
   p {
-    color: #051367;
+    color: red;
     opacity: 0.8;
     font-size: 25px;
     font-weight: lighter;
