--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -9,7 +9,7 @@
   border-radius: 3%;
 
   h1 {
-    border-bottom: 1px solid $gray-200;
+    border-bottom: 1px solid;
     margin-bottom: 0;
     padding: 1rem;
   }
@@ -21,7 +21,7 @@
   }
 
   #new_message {
-    border-top: 1px solid $gray-200;
+    border-top: 1px solid;
     padding: 1rem;
 
     .form-group {
