--- a/app/assets/stylesheets/components/_search_form.scss
+++ b/app/assets/stylesheets/components/_search_form.scss
@@ -1,3 +1,8 @@
+body {
+  background-image: url("https://res.cloudinary.com/dfmu5zwaj/image/upload/v1679136242/blurry-gradient-haikei_divpaz.png");
+}
+
+
 .search-form{
   color: white;
   padding: 10px 20px;
