--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,10 +15,10 @@ p {
   font-weight: 500;
 }
 
-img {
-  width: 100%;
-  height: 200%;
-}
+// img {
+//   width: 100%;
+//   height: 200%;
+// }
 
 
 .space {
@@ -33,13 +33,14 @@ img {
   background-image: url("./waves.png");
 }
 
-.container {
+.wrapper {
   position: relative;
+  padding: 0;
 }
 
 
 
-.container .btn {
+.home_button {
   position: absolute;
   text-decoration: none;
   top: 50%;
@@ -56,6 +57,7 @@ img {
   border-radius: 20px;
   text-align: bottom;
   outline: none;
+  margin-top: 70%;
 }
 
 .container .btn:hover {
@@ -65,10 +67,6 @@ img {
 
 a {
   text-decoration: none;
-}
-
-.btn {
-  margin-top: 70%;
 }
 
 #logo {
