--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
-<div class= "container">
-  <img src="https://res.cloudinary.com/dfmu5zwaj/image/upload/v1679136242/blurry-gradient-haikei_divpaz.png" alt="background">
+<div class= "wrapper">
+  <img src="https://res.cloudinary.com/dfmu5zwaj/image/upload/v1679136242/blurry-gradient-haikei_divpaz.png" alt="background" height= "775px">
   <img src="https://res.cloudinary.com/dfmu5zwaj/image/upload/v1679136903/Capybara_logo_3_-PhotoRoom_rytqnk.png" alt="" id="logo">
   <div class="btn">
-  <%=  link_to "Get Started", new_user_session_path %>
+    <%=  link_to "Get Started", new_user_session_path, :class => "home_button" %>
   </div>
 
 
