--- a/app/assets/stylesheets/components/_search_form.scss
+++ b/app/assets/stylesheets/components/_search_form.scss
@@ -1,5 +1,7 @@
 body {
   background-image: url("https://res.cloudinary.com/dfmu5zwaj/image/upload/v1679136242/blurry-gradient-haikei_divpaz.png");
+  background-repeat: no-repeat;
+  height: 100%;
 }
 
 
