--- a/app/assets/stylesheets/components/_icon_bar.scss
+++ b/app/assets/stylesheets/components/_icon_bar.scss
@@ -17,7 +17,6 @@ body {margin:0;}
 
 .icon-bar {
   width: 100%;
-  background-color: #FFD3B1;
   overflow: auto;
   border-radius: 5px;
   padding: 5px 5px 5px 5px;
@@ -33,5 +32,5 @@ body {margin:0;}
 }
 
 .icon-bar a:hover {
-  background-color: #FFD3B1;
+  background-color: #f4f1ef;
 }
