--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div style="width: 100%; height: 600px;"
-  data-controller="map"
-  data-map-markers-value="<%= @markers.to_json %>"
-  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+<div style="width: 100%; height: 700px;"
+  data-controller="filter-users-map"
+  data-filter-users-map-markers-value="<%= @markers.to_json %>"
+  data-filter-users-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
