add custom marker and seeds

--- a/app/views/users/_marker.html.erb
+++ b/app/views/users/_marker.html.erb
@@ -1,1 +1,1 @@
-<%= image_tag "user.png", height: 30, width: 30, alt: "Logo" %>
+<%= image_tag "user_gradient.png", height: 30, width: 30, alt: "Logo" %>
