--- a/app/assets/stylesheets/components/_map_popup.scss
+++ b/app/assets/stylesheets/components/_map_popup.scss
@@ -1,11 +1,18 @@
 .mapboxgl-popup div {
   max-width: 400px;
   border-radius: 8px;
-}
+  .container {
+    display: flex;
+    padding-bottom: 0px;
+  }
 
-.mapboxgl-popup div .container {
-  display: flex;
-  padding-bottom: 0px;
+  .btn {
+    margin-top: 16px;
+    background-color: $peach;
+    border-color: $peach;
+    color: black;
+  }
+
 }
 
 .mapboxgl-popup-content div {
@@ -22,58 +29,54 @@
   border-radius: 3px;
   padding: 18px;
   color: #0c2e41;
-}
 
-.mapboxgl-popup-content h2 {
-  font-size: 24px;
-  font-weight: 700;
-  margin-bottom: 12px;
-}
+  h2 {
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 12px;
+    margin-left: 8px;
+  }
 
-.mapboxgl-popup-content #interest {
-  font-size: 14px;
-  font-weight: 200;
-  margin-bottom: 0.75em;
-  line-height: normal;
-  border-radius: 1.25em;
-  background-color: #F8F8F8;
-  padding: 5px 10px;
-  width: auto;
-  height: auto;
-}
+  #interest {
+    font-size: 14px;
+    font-weight: 200;
+    margin-bottom: 0.75em;
+    line-height: normal;
+    border-radius: 1.25em;
+    background-color: #F8F8F8;
+    padding: 5px 10px;
+    width: auto;
+    height: auto;
+  }
 
-.mapboxgl-popup-content .user-info-box {
-  margin-left: 12px;
-}
+  .user-info-box {
+    margin-left: 12px;
+  }
 
-.mapboxgl-popup-content .favorites {
-  font-size: 14px;
-  margin-left: 8px;
-}
+  .favorites {
+    font-size: 14px;
+    margin-left: 8px;
+  }
 
-.mapboxgl-popup-content a {
-  background: $peach;
-  color: #0c2e41;
-  border-radius: 3px;
-  border-style: none;
-  text-decoration: none;
-  align-items: center;
+  a {
+    background: $peach;
+    color: #0c2e41;
+    border-radius: 3px;
+    border-style: none;
+    text-decoration: none;
+    align-items: center;
+  }
+
+  .avatar {
+    margin-top: 12px;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  }
+
 }
 
 .mapboxgl-popup-content a:visited {text-decoration: none; }
 .mapboxgl-popup-content a:hover { text-decoration: none; }
 .mapboxgl-popup-content a:active { text-decoration: none; }
-
-.mapboxgl-popup-content .avatar {
-  margin-top: 12px;
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-}
-
-.mapboxgl-popup .btn {
-  background-color: $peach;
-  border-color: $peach;
-  color: black;
-}
